<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_ingredients"
            android:icon="@drawable/croissant"
            android:title="@string/ingredients"/>
        <item
            android:id="@+id/menu_item_recipes"
            android:title="@string/recipes"
            android:icon="@drawable/food"/>
        <item
            android:id="@+id/menu_item_favourites"

            android:icon="@drawable/heart"
            android:title="@string/my_favourite_recipes"
            />
        <item
            android:id="@+id/menu_item_cart"
            android:icon="@drawable/cart"
            android:title="@string/shopping_cart"/>
    </group>


</menu>