<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

            <ImageView
                android:id="@+id/image_recipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipe_image"/>

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@drawable/check"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textOff=""
                android:textOn=""
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@+id/buttonWeb"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#AA000000"
                android:text="@string/visit_the_website"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/text_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview" />


        <ListView
            android:id="@+id/list_ingredients"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>